--- a/psicologia/test.html
+++ b/psicologia/test.html
@@ -83,6 +83,21 @@
             <label><input type="radio" name="q3" value="D"> Riducendo il numero di corsie disponibili</label><br>
         </div>
 
+            <div class="question">
+            <p>4. Perché le etichette rosse con sconti attirano l'attenzione dei clienti?</p>
+            <label><input type="radio" name="q4" value="A"> Perché il rosso è il colore preferito dalla maggioranza<label></label><br>
+            <label><input type="radio" name="q4" value="B"> Perché il rosso richiama attenzione e urgenza</label><br>
+            <label><input type="radio" name="q4" value="C"> Perché il rosso è associato alla qualità</label><br>
+            <label><input type="radio" name="q4" value="D"> Perché il rosso è più visibile in ambienti scuri</label><br>
+        </div>
+
+                <div class="question">
+            <p>5. Cosa si intende per "processi mentali" nella definizione di psicologia fornita nel testo? </p>
+            <label><input type="radio" name="q5" value="A"> Funzioni come il pensiero, la memoria, l'attenzione, il linguaggio e le emozioni<label></label><br>
+            <label><input type="radio" name="q5" value="B"> Solo le emozioni e i sentimenti </label><br>
+            <label><input type="radio" name="q5" value="C"> I comportamenti istintivi </label><br>
+            <label><input type="radio" name="q5" value="D"> Le azioni ripetitive quotidiane</label><br>
+        </div>
             
         <button type="button" onclick="submitQuiz()">Invia</button>
     </form>
@@ -93,7 +108,10 @@
             const answers = {
                 q1: "C",
                 q2: "C",
-                q3:  "B",
+                q3: "B",
+                q4: "B",
+                q5: "A",
+                
                 // Aggiungi altre risposte corrette qui
             };
 
