--- a/psicologia/test.html
+++ b/psicologia/test.html
@@ -98,6 +98,16 @@
             <label><input type="radio" name="q5" value="C"> I comportamenti istintivi </label><br>
             <label><input type="radio" name="q5" value="D"> Le azioni ripetitive quotidiane</label><br>
         </div>
+
+
+             <div class="question">
+            <p>6. Quale dei seguenti è un esempio di comportamento osservabile studiato dalla psicologia, secondo il testo? </p>
+            <label><input type="radio" name="q5" value="A"> Reazione a qualcuno che ci chiama all'improvviso<label></label><br>
+            <label><input type="radio" name="q5" value="B"> Sognare a occhi aperti</label><br>
+            <label><input type="radio" name="q5" value="C"> Pianificare mentalmente una vacanza </label><br>
+            <label><input type="radio" name="q5" value="D"> Provare tristezza</label><br>
+        </div>
+
             
         <button type="button" onclick="submitQuiz()">Invia</button>
     </form>
@@ -111,6 +121,7 @@
                 q3: "B",
                 q4: "B",
                 q5: "A",
+                q6: "A",
                 
                 // Aggiungi altre risposte corrette qui
             };
