--- a/psicologia/test.html
+++ b/psicologia/test.html
@@ -68,7 +68,7 @@
         </div>
 
             <div class="question">
-            <p>2. Quale dei seguenti _non_ è considerato un processo mentale?</p>
+            <p>2. Quale dei seguenti <em>non</em> è considerato un processo mentale?</p>
             <label><input type="radio" name="q2" value="A"> Pensiero<br>
             <label><input type="radio" name="q2" value="B"> Memoria</label><br>
             <label><input type="radio" name="q2" value="C"> Camminare</label><br>
