--- a/psicologia/test.html
+++ b/psicologia/test.html
@@ -93,7 +93,7 @@
 
                 <div class="question">
             <p>5. Cosa si intende per "processi mentali" nella definizione di psicologia fornita nel testo? </p>
-            <label><input type="radio" name="q5" value="A"> Funzioni come il pensiero, la memoria, l'attenzione, il linguaggio e le emozioni<label></label><br>
+            <label><input type="radio" name="q5" value="A"> Funzioni come il pensiero, la memoria, l'attenzione, il linguaggio e le emozioni</label><br>
             <label><input type="radio" name="q5" value="B"> Solo le emozioni e i sentimenti </label><br>
             <label><input type="radio" name="q5" value="C"> I comportamenti istintivi </label><br>
             <label><input type="radio" name="q5" value="D"> Le azioni ripetitive quotidiane</label><br>
@@ -102,10 +102,10 @@
 
              <div class="question">
             <p>6. Quale dei seguenti è un esempio di comportamento osservabile studiato dalla psicologia, secondo il testo? </p>
-            <label><input type="radio" name="q5" value="A"> Reazione a qualcuno che ci chiama all'improvviso<label></label><br>
-            <label><input type="radio" name="q5" value="B"> Sognare a occhi aperti</label><br>
-            <label><input type="radio" name="q5" value="C"> Pianificare mentalmente una vacanza </label><br>
-            <label><input type="radio" name="q5" value="D"> Provare tristezza</label><br>
+            <label><input type="radio" name="q6" value="A"> Reazione a qualcuno che ci chiama all'improvviso<label></label><br>
+            <label><input type="radio" name="q6" value="B"> Sognare a occhi aperti</label><br>
+            <label><input type="radio" name="q6" value="C"> Pianificare mentalmente una vacanza </label><br>
+            <label><input type="radio" name="q6" value="D"> Provare tristezza</label><br>
         </div>
 
             
