--- a/psicologia/test.html
+++ b/psicologia/test.html
@@ -102,7 +102,7 @@
 
              <div class="question">
             <p>6. Quale dei seguenti è un esempio di comportamento osservabile studiato dalla psicologia, secondo il testo? </p>
-            <label><input type="radio" name="q6" value="A"> Reazione a qualcuno che ci chiama all'improvviso<label></label><br>
+            <label><input type="radio" name="q6" value="A"> Reazione a qualcuno che ci chiama all'improvviso</label><br>
             <label><input type="radio" name="q6" value="B"> Sognare a occhi aperti</label><br>
             <label><input type="radio" name="q6" value="C"> Pianificare mentalmente una vacanza </label><br>
             <label><input type="radio" name="q6" value="D"> Provare tristezza</label><br>
