--- a/psicologia/test.html
+++ b/psicologia/test.html
@@ -31,7 +31,8 @@
         }
         h1 {
             text-align: center;
-            color: #4caf50; /* Colore verde */
+            font-size: 16px;
+            color: #00000;
         }
         button {
             display: block;
